--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,7 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: UX Designer
+  uni: HvA
+  year: March, 2020
   # awards:
   # summary:
+- yes very good
